# Poker-Odds-Calculator

./: DEMO.md  README.md  dune-project  poker_odds_calculator.opam  run.sh  setup.sh
_build/: .db  .digest-db  log
_build/default/: README.md  poker_odds_calculator.dune-package  poker_odds_calculator.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: gui.ml  hand_evaluator.ml  poker_odds_calculator.cmxa  poker_odds_calculator.cmxs
_build/default/lib/.merlin-conf/: lib-poker_odds_calculator
_build/default/lib/.poker_odds_calculator.objs/: poker_odds_calculator__Card.impl.d  poker_odds_calculator__Equity_calculator.impl.all-deps  poker_odds_calculator__Equity_calculator.impl.d  poker_odds_calculator__Gui.impl.all-deps  poker_odds_calculator__Gui.impl.d  poker_odds_calculator__Hand_evaluator.impl.all-deps  poker_odds_calculator__Hand_evaluator.impl.d
_build/default/lib/.poker_odds_calculator.objs/byte/: poker_odds_calculator.cmi  poker_odds_calculator.cmo  poker_odds_calculator.cmt  poker_odds_calculator__Card.cmo  poker_odds_calculator__Card.cmt  poker_odds_calculator__Equity_calculator.cmo  poker_odds_calculator__Gui.cmi  poker_odds_calculator__Gui.cmo  poker_odds_calculator__Gui.cmt  poker_odds_calculator__Hand_evaluator.cmo  poker_odds_calculator__Hand_evaluator.cmt
_build/default/test/: test_poker.ml
_build/default/test/.merlin-conf/: exe-test_poker
_build/default/test/.test_poker.eobjs/byte/: dune__exe__Test_poker.cmi  (+1 more)
lib/: card.ml  dune  equity_calculator.ml  gui.ml  hand_evaluator.ml
test/: dune  test_poker.ml
(+23 files in other folders)
